Spacing correction

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,7 +91,7 @@ section {
   }
   .section {
     margin-bottom: 40px !important;
-    padding-top: 2rem !important;
+    padding-top: 3rem !important;
     padding-bottom: 2rem !important;
     margin-bottom: 40px !important;
   }
